# fastapi

./: main.py  pyproject.toml
.github/workflows/: docker-publish.yml
