[tool.poetry]
name = "miniproject"
version = "v0.1.0"
description = "testing fastapi"
authors = ["dvy-dev <david.chimzizi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
